<?xml version="1.0"?>
<package format="2">
  <name>hydra_topology</name>
  <version>0.0.1</version>
  <description>Online GVD and topological skeleton creation</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hydra_msgs</depend>
  <depend>hydra_utils</depend>
  <depend>kimera_semantics</depend>
  <depend>spark_dsg</depend>
  <depend>tf2_eigen</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>

  <export>
  </export>

</package>
