<?xml version="1.0"?>
<package format="2">
  <name>hydra_utils</name>
  <version>0.0.1</version>
  <description>Utility library for hydra</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pose_graph_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>gtsam</depend>

  <export>
  </export>

</package>
