<?xml version="1.0"?>
<package format="2">
  <name>hydra_utils</name>
  <version>0.0.1</version>
  <description>Utility library for hydra</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gtsam</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>kimera_dsg</depend>
  <depend>kimera_pgmo</depend>
  <depend>pose_graph_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
