<?xml version="1.0"?>
<package format="2">
  <name>hydra_utils</name>
  <version>0.0.1</version>
  <description>Utility library for hydra</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>gtsam</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>kimera_pgmo</depend>
  <depend>pose_graph_tools</depend>
  <depend>spark_dsg</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
