<?xml version="1.0"?>
<package format="2">
  <name>kimera_dsg_builder</name>
  <version>1.0.0</version>
  <description>Utilities for building a Kimera-DSG from sensor data</description>

  <author email="arosinol@mit.edu">Antoni Rosinol</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- standard dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>

  <!-- less standard dependencies -->
  <depend>gtsam</depend>
  <depend>kimera_dsg</depend>
  <depend>kimera_dsg_visualizer</depend>
  <depend>kimera_pgmo</depend>
  <depend>kimera_semantics</depend>
  <depend>kimera_semantics_ros</depend>
  <depend>kimera_topology</depend>
  <depend>kimera_vio_ros</depend>
  <depend>object_db</depend>
  <depend>teaserpp</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <!-- TODO(nathan) invert this dependency -->
  <!--<depend>graph_cmr_ros</depend> -->

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
