<?xml version="1.0"?>
<package format="2">
  <name>kimera_path_planning</name>
  <version>1.0.0</version>
  <description>Kimera Path Planning</description>

  <author email="arosinol@mit.edu">Antoni Rosinol</author>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <!-- this is here only bcs of undefined ref on multiRobot.. -->
  <!-- <depend>gtsam</depend> -->

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <depend>mav_msgs</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_trajectory_generation_ros</depend>

  <depend>voxblox_ros</depend>
  <depend>voxblox_skeleton</depend>
  <depend>voxblox_skeleton_planner</depend>
  <depend>voxblox_planning_common</depend>

  <depend>kimera_scene_graph</depend>
</package>
